<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartZone</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_first">首页</string>
    <string name="tab_second">动态</string>
    <string name="tab_third">分类</string>
    <string name="tab_fourth">我的</string>
    <string name="my_page_login">登陆／注册</string>
	<string name="my_page_boardcast">小区广播</string>
	<string name="my_page_privatemsg">我的私信</string>
	<string name="my_page_collection">我的收藏</string>
	
	<string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
</resources>
